tests/should_fail/terminates/implied_bounds.stderr
error: Mutually recursive functions: when calling `<B as Tr>::f`...
  --> implied_bounds.rs:29:5
   |
29 |     fn f(self) {
   |     ^^^^^^^^^^
   |
note: then `<B as Tr>::f` uses the impl `<B as Tr>` via the call to `<A<T> as Tr>::f`...
  --> implied_bounds.rs:30:23
   |
30 |         A(A(A(self))).f()
   |                       ^^^
note: finally the method `<B as Tr>::f` might be called
  --> implied_bounds.rs:29:5
   |
29 |     fn f(self) {
   |     ^^^^^^^^^^

error: aborting due to 1 previous error

